--- a/css/style.css
+++ b/css/style.css
@@ -2231,6 +2231,18 @@ button:hover {
   color: white;
 }
 
+.professional-project {
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.professional-project p{
+  color: white;
+}
+
+
 .screenshots {
   display: flex;
   justify-content: center;
@@ -2238,6 +2250,7 @@ button:hover {
   max-width: 100%;
   height: auto;
   overflow: hidden;
+  border-radius: 20px;
 }
 
 .screenshots-inner {
@@ -2249,11 +2262,40 @@ button:hover {
   flex: 0 0 33.33%;
   max-width: 100%;
   max-height: 200px;
-  object-fit: cover;
+  object-fit: contain;
   margin: 0 5px;
   border-radius: 5px;
   pointer-events: none;
 }
+
+.professional-screenshots {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
+  border-radius: 20px;
+  background-color: white;
+}
+
+.professional-screenshots-inner {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.professional-screenshots img {
+  flex: 0 0 33.33%;
+  max-width: 100%;
+  max-height: 200px;
+  object-fit: contain;
+  margin: 0 5px;
+  border-radius: 5px;
+  pointer-events: none;
+  margin: 0 10px;
+}
+
+
 
 @media (max-width: 767px) {
   .project-heading-2 {
@@ -2267,130 +2309,209 @@ button:hover {
 }
 
 /* Personal Projects CSS Ends here */
-/* Profesional Projects CSS Starts here */
+/* Professional Projects CSS Starts here */
 
 .professional-projects {
   margin-bottom: 40px;
+  text-align: center; /* Align content in the center horizontally */
 }
 
 .section-title {
-  text-align: center;
   font-size: 24px;
   margin-bottom: 20px;
 }
 
-.project {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
+.project-carousel {
+  display: inline-flex; /* Use inline-flex to make the container shrink-to-fit */
+  flex-direction: column; /* Arrange rows vertically */
+  gap: 20px; /* Add some spacing between rows */
+  overflow-x: auto;
+  scroll-behavior: smooth;
+}
+
+.project-carousel__row {
+  display: flex; /* Use flexbox to arrange items horizontally */
+  justify-content: center; /* Align items in the center horizontally */
 }
 
 .project__details {
-  flex: 1;
+  display: flex;
+  justify-content: space-evenly;
+  flex: 0 0 auto;
+  margin-right: 10px;
 }
 
-.project__title {
-  margin-top: 0;
-  font-size: 18px;
+.project__details img {
+  border-radius: 20%;
+  object-fit: scale-down;
+  margin-top: 20px;
+  background: white;
+  pointer-events: none;
+  user-select: none;
+  margin-right: 20px; /* Add margin to the right of each image */
 }
 
-.project__description {
-  margin-top: 5px;
-  color: #777;
+/* Hide horizontal scrollbar */
+.project-carousel::-webkit-scrollbar {
+  display: none;
 }
 
 
+@media (max-width: 767px),
+       (min-width: 768px) and (max-width: 1024px) and (min-height: 768px) and (max-height: 1366px),
+       (width: 912px) and (height: 1368px),
+       (width: 1024px) and (height: 600px),
+       (width: 1280px) and (height: 800px),
+       (width: 915px) and (height: 412px),
+       (width: 844px) and (height: 390px),
+       (width: 360px) and (height: 800px),
+       (width: 360px) and (height: 780px),
+       (width: 360px) and (height: 880px),
+       (width: 360px) and (height: 804px),
+       (width: 320px) and (height: 568px) {
+  .project__details img {
+    width: calc(75px) !important; /* Adjust width for 4 x 4 grid with spacing */
+    margin-right: 0; /* Remove right margin for the last image in each row */
+    height: calc(75px) !important;
+  }
+}
+
+/* tablet view */
+@media (min-width: 768px) and (max-width: 1024px) and (min-height: 768px) and (max-height: 1366px),
+       (width: 768px) and (height: 1024px) {
+  .project__details img {
+    width: calc(100px) !important; /* Adjust width for 4 x 4 grid with spacing */
+    margin-right: 20px; /* Remove right margin for the last image in each row */
+    height: calc(100px) !important;
+  }
+}
+/* professional projects css ends here */
 
 /* Experience css starts */
 .project-heading-3{
   text-align: center;
   margin-top: 40px;
-  margin-bottom: 20px;
-  font-size: 42px;
-  line-height: 48px;
-  font-weight: 700;
-}
-/* Style the list items with a dot icon */
-.bullet-list {
-  list-style: none;
-}
-
-.bullet-list li::before {
-  content: "\2022"; /* Unicode character for a bullet (•) */
-  font-size: 14px; /* Adjust the font size as needed */
-  margin-right: 8px; /* Adjust the spacing between the bullet and text */
-  vertical-align: middle; /* Align the bullet vertically with the text */
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  .image-responsive-first {
-    width: 100% !important;
-    height: 80% !important;
-    margin-top: 30px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .image-responsive-second {
-    width: 70% !important;
-    height: 76% !important;
-    left: 50%;
-    top: 35%;
-    transform: translate(-50%, -50%);
-  }
-}
-
-
-/* Experience css ends */
-
-/* certificate css starts */
-h2.certificates{
-  text-align: center;
-  margin-top: 70px;
   margin-bottom: 40px;
   font-size: 42px;
   line-height: 48px;
   font-weight: 700;
 }
 
-.certificate_screenshots {
+.experience-section {
+  margin-bottom: 40px;
+  color: white; /* Change text color to white for better visibility */
+}
+
+.experience-container {
   display: flex;
-  justify-content: center;
-  margin-top: 10px;
-  max-width: 100%;
+  align-items: center;
+}
+
+.experience-image img {
+  width: 480px;
   height: auto;
-  overflow: hidden;
+  border-radius: 20px;
+  margin-right: 90px;
+}
+.experience-images img {
+  width: 480px;
+  height: auto;
+  border-radius: 20px;
+  margin-left: 5px;
+}
+.experience-text {
+  flex: 1;
+  margin-right: 20px;
 }
 
-.certificate-screenshots-inner {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
+.experience-text h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
-.certificate_screenshots img {
-  flex: 0 0 33.33%;
-  max-width: 100%;
-  max-height: 200px;
-  object-fit: fill;
-  margin: 0 5px;
-  border-radius: 5px;
-  pointer-events: none;
+.experience-text h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
 }
-@media (max-width: 768px) {
-  .certificate-screenshots-inner {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
+
+.experience-text p {
+  font-size: 16px;
+  line-height: 1.5;
+}
+.experience-text ul {
+  list-style-type: none; /* Remove default list styles */
+  padding-left: 0; /* Remove default left padding */
+}
+
+.experience-text li:before {
+  content: "\2022"; /* Unicode character for bullet */
+  color: white; /* Bullet color */
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
+.experience-text h2{
+  text-decoration: underline;
+  font-weight: 600;
+}
+.experience-text h3{
+  text-decoration: underline;
+  font-weight: 600;
+}
+
+@media (max-width: 767px),
+       (min-width: 768px) and (max-width: 1024px) and (min-height: 768px) and (max-height: 1366px),
+       (width: 912px) and (height: 1368px),
+       (width: 1024px) and (height: 600px),
+       (width: 1280px) and (height: 800px),
+       (width: 915px) and (height: 412px),
+       (width: 844px) and (height: 390px) {
+  .experience-container {
+    flex-direction: column; /* Change flex direction to stack elements vertically */
   }
 
-  .certificate-screenshots-inner img {
-    flex: 0 0 33.33%;
-    max-width: 100%;
-    max-height: 200px;
-    object-fit: fill;
-    margin: 0 5px;
-    border-radius: 5px;
-    pointer-events: none;
+  .experience-image img,
+  .experience-images img {
+    width: 100%; /* Make the images take up the full width */
+    height: auto; /* Ensure images maintain aspect ratio */
+    border-radius: 20px;
+    margin: 0; /* Remove any margins */
+  }
+
+  .experience-text {
+    margin-top: 20px; /* Add space between the image and text */
+    margin-right: 0; /* Remove right margin */
+  }
+
+  .experience-images {
+    order: -1; /* Move the images above text */
+    margin-bottom: 20px; /* Add some space below the image */
   }
 }
+
+/* tablet view */
+@media (min-width: 768px) and (max-width: 1024px) and (min-height: 768px) and (max-height: 1366px),
+       (width: 768px) and (height: 1024px) {
+    .experience-container {
+        flex-direction: column; /* Change flex direction to stack elements vertically */
+        align-items: center; /* Align items in the center horizontally */
+    }
+
+    .experience-image img,
+    .experience-images img {
+        width: 65%; /* Decrease image width to 65% */
+        height: auto; /* Ensure images maintain aspect ratio */
+        border-radius: 20px;
+        margin-left: 100px; /* Add some space below the image */
+    }
+
+    .experience-text {
+        margin-right: 0; /* Remove right margin */
+    }
+}
+
+/* Experience css ends */
 
 
 /* Style the footer */
